--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -99,6 +99,7 @@
                 <field name="order_partner_id" invisible="1" />
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id)]"/>
+		                <field name="id" />
 				<field name="bultos" />
 				<field name="und_user" />
 				<field name="kilos_user" />
