--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -72,12 +72,12 @@
 		    <field name="sale_order_line_id"/>
                     <field name="fecha_entrada"/>
 		    <field name="fecha_salida
-				 
+                </xpath>
+		<group>
 		    <field name="ref" invisible="1"/>
 		    <field name="product_id" invisible="1"/>
-		    <field name="create_date" invisible="1"/>
-                </xpath>
-		
+		    <field name="create_date" invisible="1"/>	 
+		</group>
 		
 
         </field>
