--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -212,6 +212,38 @@
     <menuitem name="Bobinas" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_bobina" action="action_sale_order_line_bobina" sequence="6"/>
     <menuitem name="Pie de Pallet" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_pieballet" action="action_sale_order_line_pieballet" sequence="7"/>
     <menuitem name="Flat Board" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_flatboard" action="action_sale_order_line_flatboard" sequence="8"/>
+	
+	
+	
+	<!-- FORMULARIO DE LINEAS DE PEDIDO -->
+	
+	<record id="view_sale_order_line_eltete_form" model="ir.ui.view">
+        <field name="name">sale.order.line.eltete.form</field>
+        <field name="model">sale.order.line</field>
+        <field name="inherit_id" ref="sale.sale_order_line_view_form_readonly"/>
+        <field name="arch" type="xml">
+        
+            <xpath expr="//form/sheet/group" position="after">
+            
+                 
+                    <group>
+                        <field name="lot_ids"/>
+                    </group>
+                                
+                    <group>
+                        <button name="enviar_a_fabricar_linea" type="object" string="Mandar a fabricar"  />
+                    </group>
+                                
+                    <group>
+                        <button name="procesar_fabricacion_linea" type="object" string="Fabricado"  />
+                    </group>
+
+            </xpath>
+            
+
+
+        </field>
+    </record>
     
     
 </odoo>
