--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -83,13 +83,13 @@
                         <field name="lot_ids"/>
                     </group>
                                 
-                    <group>
+                    <!--<group>
                         <button name="enviar_a_fabricar" type="object" string="Mandar a fabricar" states="sale" />
                     </group>
                                 
                     <group>
                         <button name="procesar_fabricacion" type="object" string="Fabricado" states="sale" />
-                    </group>
+                    </group>-->
 
                 </page>
             </xpath>
