--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -56,8 +56,8 @@
                             <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
                             <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
 			    <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
-                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_flatboard', '=', False),]}" />
-                            <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+			    <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_flatboard', '=', False),]}" /> 
                             <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
                             <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>	
 			    <field name='tipo_varios_id'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
@@ -192,7 +192,16 @@
                                 <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
                                 <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
                                 <field name='inglete_texto' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
-                            </group>
+                            
+				<field name='no_editar' />
+				<field name='referencia_cliente_nombre' />
+				<field name='paletizado' />
+				<field name='ancho_pallet' />
+				<field name='pallet_especial_id' />
+				<field name='und_paquete' />
+				<field name='paquetes_fila' />
+				
+			    </group>
                         </group>
                     </sheet>
                 </form>
@@ -243,7 +252,8 @@
 				<h3>Oferta:</h3>
 				<field name='precio_cliente' invisible="1"/>
                                 <field name='num_pallets' attrs="{'invisible': [('precio_cliente', '=', '5')]}"/>
-				    
+				 
+				<field name='und_exactas' />
                                 <field name='unidades' attrs="{'invisible': [('precio_cliente', '=', '5')]}"/>
 				<field name='precio_metro' attrs="{'invisible': ['|',('precio_cliente', '=', '4'),('precio_cliente', '=', '5'),]}"/>
                                 <field name='kilos' attrs="{'invisible': [('precio_cliente', '!=', '4')]}"/>
@@ -251,6 +261,7 @@
                                 <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '!=', '5')]}"/>
 			</group>
                             <group>
+				<field name='no_editar' />
                                 <h3>Unidades por Pallet:</h3>
                                 <field name='alto_pallet_text' />
                                 <field name='peso_neto_text' />
