--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -120,7 +120,7 @@
 			</field>
             
 			<field name="confirmation_date" position="after">
-				<field name="editar"/>
+				<field name="no_editar"/>
 				<field name="descuento_porcentaje"/>
 				<field name="fecha_cliente"/>
 				<field name="fecha_entrega_cliente"/>
