--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -11,6 +11,7 @@
 			<field name="amount_untaxed" position="before">
 				<field name="importe_sin_descuento"/>
 				<field name="descuento_porcentaje"/>
+				<field name="importe_descuento"/>
 			</field>
 
             
