--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -97,20 +97,20 @@
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
-				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]"/>
-				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id)]"/>
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 		                <field name="id" />
 				<field name="bultos" />
 				<field name="und_user" />
 				<field name="kilos_user" />
 				<field name="und_pallet" />
-				<field name="num_pallets" />
+				<field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="cantidad" />
 				<field name="precio" />
 				<field name="importe" />
 				<field name="estado" />	
-		                <field name="aclaracion" />	
-		                <field name="no_editar"/>
+				<field name="aclaracion" />	
+				<field name="no_editar"/>
             </xpath>
             
 		
