--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -53,6 +53,8 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='name']" position="after">
+		    		<field name="provincia_id"/>
+		    		<field name="transportista"/>
 				<field name="fecha_entrega"/>
 			</xpath>
 			
