--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -213,7 +213,7 @@
     
     
     <menuitem name="Líneas de pedido" parent="sale.sale_menu_root" id="menu_sale_order_line_ordenes" sequence="3"/>
-	<menuitem name="Pedidos" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_pedidos" action="sale.action_orders" sequence="1"/>
+	<menuitem name="Pedidos" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_pedidos" action="sale.action_orders" sequence="9"/>
     <menuitem name="Cantoneras" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_cantonera" action="action_sale_order_line_cantonera" sequence="1"/>
     <menuitem name="Perfiles U" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_perfilu" action="action_sale_order_line_perfilu" sequence="2"/>
     <menuitem name="Slip sheets" parent="menu_sale_order_line_ordenes" id="menu_sale_order_line_slipsheet" action="action_sale_order_line_slipsheet" sequence="3"/>
@@ -234,7 +234,8 @@
         <field name="arch" type="xml">
         
             <xpath expr="//form/sheet/group" position="after">
-            
+            	   <field name="lotes_agregados"/>
+		    <field name="lotes_fabricar"/>
                  
                     <group>
                         <field name="lot_ids"/>
