--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -237,6 +237,11 @@
             
                     <group>
 		    	<field name="lotes_fabricar"/>
+		    </group>
+		    <group>
+		    	<field name="lotes_inicio"/>
+		    </group>
+		    <group>
 			 <field name="lot_ids"/>
                     </group>
                                 
