--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -244,17 +244,10 @@
 					<field name="lotes_inicio"/>
 				</group>
 				<group>
-					<field name="lot_ids"/>
+					<field name="lot_ids" widget="many2many" domain="[('disponible','=',True)]"/>
 				</group>
 				
-				<group>
-					<group>
-						<field name="add_lot_id" domain="[('disponible','=',True)]"/>
-					</group>
-					<group>
-						<button name="add_lot_line" type="object" string="Añadir lote"  />
-					</group>
-				</group>
+
 							
 				<group>
 					<button name="enviar_a_fabricar_linea" type="object" string="Mandar a fabricar"  />
