--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -240,9 +240,8 @@
             
 				<group>
 					<field name="lotes_fabricar"/>
-				</group>
-				<group>
 					<field name="lotes_inicio"/>
+					<field name="orden_fabricacion"/>
 				</group>
 				<group>
 					<field name="lot_ids" widget="many2many" domain="[('disponible','=',True)]"/>
