--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -194,7 +194,7 @@
                                 <field name='inglete_texto' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),], 'readonly': [('no_editar', '=', True)]}"/>
                             </group>
 			    <group>
-					<field name='no_editar'/>
+					<field name='no_editar' invisible="1"/>
 					<field name='referencia_cliente_nombre' attrs="{'readonly': [('no_editar', '=', True)]}"/>
 					<field name='paletizado' attrs="{'readonly': [('no_editar', '=', True)]}" />
 				        <field name='ancho_pallet' attrs="{'readonly': [('no_editar', '=', True)]}" />
@@ -257,15 +257,14 @@
                                 <field name='num_pallets' attrs="{'invisible': [('precio_cliente', '=', '5')], 'readonly': [('no_editar', '=', True)]}"/>
 				 
 				<field name='und_exactas' />
-				<field name='unidades' />
-                                <!---<field name='unidades' attrs="{'invisible': [('precio_cliente', '=', '5')], 'readonly': [('no_editar', '=', True)]}"/>-->
+                                <field name='unidades' attrs="{'invisible': [('precio_cliente', '=', '5')], 'readonly': [('no_editar', '=', True)]}"/>
 				<field name='precio_metro' attrs="{'invisible': ['|',('precio_cliente', '=', '4'),('precio_cliente', '=', '5'),], 'readonly': [('no_editar', '=', True)]}"/>
                                 <field name='kilos' attrs="{'invisible': [('precio_cliente', '!=', '4')], 'readonly': [('no_editar', '=', True)]}"/>
                                 <field name='precio_kilo' attrs="{'invisible': [('precio_cliente', '!=', '4')], 'readonly': [('no_editar', '=', True)]}"/>
                                 <field name='precio_varios' attrs="{'invisible': [('precio_cliente', '!=', '5')], 'readonly': [('no_editar', '=', True)]}"/>
 			</group>
                             <group>
-				<field name='no_editar'/>
+				<field name='no_editar' invisible ="1"/>
                                 <h3>Unidades por Pallet:</h3>
                                 <field name='alto_pallet_text' />
                                 <field name='peso_neto_text' />
