--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -28,8 +28,8 @@
 					<group>
 						<h3>Producto a fabricar</h3>
 						<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),]" options="{'no_create': True, 'no_create_edit':True}" />
-						<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-						<field name='oferta_id' domain="[('attribute_id', '=', attribute_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+						<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+						<field name='oferta_id' domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
 						<field name='num_pallets' sum="Pallets"/>
 					</group>
 				</group>
@@ -98,8 +98,8 @@
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
-				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="bultos" />
 				<field name="und_user" />
 				<field name="kilos_user" />
